fix: исправлен визуал CardList (добавлен gap между карточками)

--- a/src/entities/cards/components/cardList/cardList.module.css
+++ b/src/entities/cards/components/cardList/cardList.module.css
@@ -21,6 +21,10 @@
 	line-height: 1.2;
 }
 
+.list {
+	gap: 24px;
+}
+
 .list_small {
 	display: flex;
 	justify-content: space-between;
